<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_favorites"
        android:icon="@android:drawable/btn_star"
        android:title="@string/favorites"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_shopping_list"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/shopping_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:icon="@android:drawable/ic_menu_send"
        android:title="Contact Us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu> 